Fixed deprecations and few javadocs
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>